--- a/handlers/common/base.html
+++ b/handlers/common/base.html
@@ -15,7 +15,8 @@
     <noscript>
         <strong class="align-center row">抱歉，您的浏览器不支持访问该网站，建议更换更新版本的浏览器，例如Chrome/Firefox/Safari等</strong>
     </noscript>
-    
+    <input type="file" id="baseFilePicker" class="hide" multiple/>
+
     <div class="root">
         <!-- 导航/菜单栏 -->
         {% include common/base_nav.html %}
