--- a/handlers/common/form/form.html
+++ b/handlers/common/form/form.html
@@ -5,6 +5,7 @@
     .form-row {
         margin-top: 0px;
         margin-bottom: 10px;
+        padding-left: 10px;
         width: 100%;
         float: left;
     }
