--- a/handlers/common/script/load_markdown.html
+++ b/handlers/common/script/load_markdown.html
@@ -1,6 +1,6 @@
 {% init _is_markdown_loaded = False %}
 {% init markdown_content = "" %}
-{% from xutils import markdown_util %}
+{% from xutils import markdown_utils %}
 
 {% if not _is_markdown_loaded %}
     <!-- 加载markdown相关文件 -->
@@ -15,7 +15,7 @@
     <!-- csv编辑依赖 -->
     <script type="text/javascript" src="{{_server_home}}/_static/js/editor-csv.js"></script>
 
-    {% if markdown_util.has_latex(markdown_content) %}
+    {% if markdown_utils.has_latex(markdown_content) %}
         <!-- KaTeX 用于公式处理 -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.css">
         <script src="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.js"></script>
