--- a/handlers/common/form/form.html
+++ b/handlers/common/form/form.html
@@ -84,6 +84,8 @@
             change: function(value, date, endDate) {
                 // 数据变化就更新
                 $(elem).val(value);
+                // 自动关闭日期选择器
+                $(elem).remove(".layui-date");
             },
             show: true
         });
