优化前端样式

--- a/handlers/tools/shell.html
+++ b/handlers/tools/shell.html
@@ -31,7 +31,7 @@
 <div class="card">
     <div class="col-md-12">
         <textarea id="editor" class="col-md-12" rows="20" id="code">{{code}}</textarea>
-        <input type="button" class="btn margin-top-5" value="运行" onclick="runShellCode()"/>
+        <input type="button" class="btn margin-top-sm" value="运行" onclick="runShellCode()"/>
     </div>
 </div>
 
