--- a/handlers/common/base_footer.html
+++ b/handlers/common/base_footer.html
@@ -22,7 +22,7 @@
 
 {% if show_nav and xconfig.WebConfig.ui_show_footer %}
 <div class="footer">
-    <div class="x-center pad10">
+    <div class="x-center padding-sm">
         <div>
             <!-- left -->
         </div>
